After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784320 - vaapipostproc: Fails to play MVC encoded data correctly
vaapipostproc: Fails to play MVC encoded data correctly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
git master
Other Linux
: Normal normal
: 1.12.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-29 06:20 UTC by Hyunjun Ko
Modified: 2017-07-03 12:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
postprocutil: set multivew-mode/flags to src caps (1.82 KB, patch)
2017-06-29 06:22 UTC, Hyunjun Ko
committed Details | Review

Description Hyunjun Ko 2017-06-29 06:20:25 UTC
Reproduce step
1\ Making MVC encoded data using vaapih264enc
gst-launch-1.0 -v videotestsrc pattern=ball name=left videotestsrc name=right glstereomix name=mix \
left. ! video/x-raw,width=640,height=480! glupload ! mix. \
right. ! video/x-raw,width=640,height=480! glupload ! mix. \
mix. ! video/x-raw'(memory:GLMemory)',multiview-mode=frame-by-frame ! queue ! glcolorconvert ! gldownload ! vaapih264enc num-views=2 ! filesink location=mvc_test.264

2\ Playing the produced data
gst-play-1.0 mvc_test.264  --videosink="glimagesink output-multiview-mode=side-by-side"
-> This fails.

While this pipeline is working correctly:
gst-launch-1.0 filesrc location=mvc_test.264 ! h264parse ! vaapih264dec ! glimagesink output-multiview-mode=side-by-side

This is because vaapipostproc doesn't pass information of multiview mode to src caps.
Comment 1 Hyunjun Ko 2017-06-29 06:22:22 UTC
Created attachment 354671 [details] [review]
postprocutil: set multivew-mode/flags to src caps

Makes it playing MVC encoded stream by setting multiview mode/flags
and views to src caps according to sink caps.
Comment 2 Víctor Manuel Jáquez Leal 2017-07-03 11:49:47 UTC
Attachment 354671 [details] pushed as e7bba34 - vaapipostproc: set multivew-mode flags to src caps

(I modified a bit the commit log and the patch)
Comment 3 Víctor Manuel Jáquez Leal 2017-07-03 12:09:22 UTC
Pushed as 152bbb85 for branch 1.12